<resources>
    <string name="app_title">American Whitewater</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="news">News</string>
    <string name="runs">Runs</string>
    <string name="favorites">Favorites</string>
    <string name="map">Map</string>
    <string name="show_runnable">Only show runnable results</string>
    <string name="level_class">Level: %1$s, Class: %2$s</string>
    <string name="region_tab_title">By Region</string>
    <string name="fr_current_location"> (current location)</string>
    <string name="difficulty_tab_title">By Class</string>
    <string name="distance_tab_title">By Distance</string>
    <string name="filters_title">Filters</string>
    <string name="filter_difficulty_title">What difficulties do you want to try?</string>
    <string name="class1">Class I</string>
    <string name="class2">Class II</string>
    <string name="class3">Class III</string>
    <string name="class4">Class IV</string>
    <string name="class5">Class V</string>
    <string name="class5_plus">Class V+</string>
    <string name="details">Details</string>
    <string name="read_more">...READ MORE</string>
    <string name="difficulty">Difficulty</string>
    <string name="length">Length</string>
    <string name="gradient">Gradient</string>ing>
    <string name="reach_detail_difficulty">Class %s</string>
    <string name="reach_detail_length">%s miles</string>
    <string name="reach_detail_gradient">%s fpm</string>


    <string name="api_map_key">AIzaSyApgQvIbIQzqFp8a7185lz-MMUpKR9wKgo</string>
    <string name="rapid">Rapid</string>
    <string name="gauge">Gauge</string>
    <string name="take_out">Take-out</string>
    <string name="put_in">Put-in</string>
    <string name="filter_distance_title">How far from your current location</string>
    <string name="filter_distance_note">Note: The distance filter cannot be combined with region or difficulty filters</string>
    <string name="filter_distance_current_location">Your current location</string>
    <string name="filter_distance_new_address">Type a new address</string>
    <string name="filter_distance_update_location">Update location</string>
    <string name="runnable">Runnable</string>
    <string name="frozen">Frozen</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="no_info">No info</string>
    <string name="directions">Directions</string>
    <string name="flow_and_difficulty">Level:%1$s, Class:%2$s</string>
    <string name="donate_title">Let’s Support AW together!</string>
    <string name="donate_detail">American Whitewater is a national non-profit organization with a mission to conserve and restore America\’s whitewater resources and to enhance opportunities to enjoy them safely.</string>
    <string name="donate_button_title">Donate now</string>
    <string name="close">Close</string>
    <string name="donate">Donate!</string>
    <string name="join">Join!</string>
    <string name="about_title">About Amerian Whitewater</string>
    <string name="mission">Mission</string>
    <string name="stewardship">Stewardship</string>
    <string name="funding">Funding</string>

    <string name="about_mission">Founded in 1954, American Whitewater is a national non-profit organization (Non-profit # 23-7083760) with a mission “to conserve and restore America’s whitewater resources and to enhance opportunities to enjoy them safely.” American Whitewater is a membership organization representing a broad diversity of individual whitewater enthusiasts, river conservationists, and more than 100 local paddling club affiliates across America. The organization is the primary advocate for the preservation and protection of whitewater rivers throughout the United States, and connects the interests of human-powered recreational river users with ecological and science-based data to achieve the goals within its mission.</string>
    <string name="about_funding">To finance its projects, American Whitewater seeks memberships, member gifts, corporate and foundation support. In addition, revenue from events, advertising and branded products support stewardship efforts.
\n\n
Individual memberships are crucial to American Whitewater and our goal is to remain an organization of whitewater enthusiasts funded by and ultimately representative of the interests of those to whom the health and enjoyment of our nation’s rivers is a priority. Currently American Whitewater receives support from over 5,000 dues paying member and 100 affiliate paddling clubs.</string>
    <string name="about_stewardship">American Whitewater works to protect and restore rivers, maintains a national inventory of whitewater rivers, monitors potential threats to whitewater river resources, publishes information on river conservation, works with government agencies to protect the ability of the public to have a voice in the management of rivers, advocates for legislation protecting our rivers and their aquatic resources, and provides technical advice to local groups regarding river conservation and management.
\n\n
American Whitewater is working full-time to assure protection of whitewater rivers and the ability of the public to enjoy clean, free-flowing rivers. This includes our access program that focuses on protecting navigability on our nation’s waterways and acquisition of lands that provide public access to rivers. </string>
    <string name="about_read_more">Read more about American Whitewater</string>
    <string name="about_join">Join our membership</string>
    <string name="about_stewardship_learn_more">Learn more about stewardship program</string>
    <string name="view_webpage">View webpage</string>
    <string name="search_hint">Search runs</string>
    <string name="no_favorites_title">No favorite runs, yet.</string>
    <string name="no_favorites_detail">You haven’t favorited any runs, yet!\n Tap the star icon for any run on the list or detail page to add one!</string>
    <string name="search_regions">Search regions</string>
    <string name="your_selected_regions">Your selected regions</string>
    <string name="greg_lee">Gregory Lee</string>
    <string name="software_engineer">Software Engineer \nProduct Manager</string>
    <string name="greg_americanwhitewater_org">greg@americanwhitewater.org</string>
    <string name="drop_line">Drop me a line!</string>
    <string name="hellorachellol_gmail_com">girlracheljin@gmail.com</string>
    <string name="lead_product_designer">Product Designer</string>
    <string name="rachel_jin">Rachel Jin</string>
    <string name="thanks">This app was built entirely with volunteer hours. Special thanks to the following people for making this app a reality:
        \n\nRachel Jin, who designed this beautiful app. She\'s never been in a kayak, but she worked tirelessly to understand exactly what the whitewater community needs. And, maybe this will get her out on the water :).
        \n\nRyan Groth, for fielding my incessant questions and massaging the backend to work with a mobile app.  This was no small feat, since mobile apps hadn\'t even been invented when the AW backend was designed.
        \n\nMark Singleton and Thomas O\'Keefe for their support of this project and help getting everything set up, including all of the accounts, api access, documentation, beta testers, etc.
    \n\nIf you have any questions or feedback, or find a bug, please don\'t hesitate to: </string>
    <string name="app_team_title">American Whitewater App Team</string>
    <string name="about_greg">I learned to paddle in California at the end of college, and it\'s been my obsession ever since. I love exploring new rivers. It doesn\'t matter if it\'s class II or class V, if it\'s new, I\'m down. That said, you can\'t beat a day on some of the classics. These days you can find me paddling mostly in the North East, sometimes in California, and I\'ve also spent some time in the Pacific Northwest. \n\n
        Before I was introduced to kayaking, I grew up in Boston, and studied Mechanical Engineering at Stanford University. I switched to software engineering, mostly for mobile apps, after getting fed up waiting for parts. I\'m passionate about data, and I\'m happy to help improve access to American Whitewater\'s data, so that we can all explore with the best possible beta.</string>
    <string name="about">About</string>
    <string name="about_aw">About AW</string>
    <string name="app_team">App Team</string>
    <string name="communicate">Communicate</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="feedback">Feedback/Bug Reports</string>
    <string name="about_greg_title">About Greg</string>
    <string name="about_app">About the App</string>
    <string name="no_results_try_changing_your_filter">We couldn’t find any runs. Try changing your filters.</string>
    <string name="change_filters">Change filters</string>


</resources>
