<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/primary"
        android:elevation="4dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/close_tap_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/close"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_close"/>
        </LinearLayout>

        <TextView
            style="@style/Headline1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="32dp"
            android:gravity="center_vertical"
            android:text="@string/app_team_title"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/greg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/img_greg"
            app:riv_oval="true"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/opensans_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greg_lee"
                android:textColor="@color/font_blue"
                android:textSize="16sp"/>

            <TextView
                android:fontFamily="@font/opensans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/software_engineer"
                android:textColor="@color/font_black"
                android:textSize="16sp"/>

            <TextView
                android:fontFamily="@font/opensans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greg_americanwhitewater_org"
                android:textColor="@color/font_grey"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_marginTop="32dp"
        android:alpha=".2"
        android:background="@color/font_grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/img_rachel"
            app:riv_oval="true"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/opensans_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rachel_jin"
                android:textColor="@color/font_blue"
                android:textSize="16sp"/>

            <TextView
                android:fontFamily="@font/opensans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lead_product_designer"
                android:textColor="@color/font_black"
                android:textSize="16sp"/>

            <TextView
                android:fontFamily="@font/opensans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hellorachellol_gmail_com"
                android:textColor="@color/font_grey"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_marginTop="32dp"
        android:alpha=".2"
        android:background="@color/font_grey"/>

    <TextView
        android:fontFamily="@font/opensans_semibold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/about_greg_title"
        android:textColor="@color/font_blue"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/about_greg"
        style="@style/Label1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:text="@string/about_greg"/>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_marginTop="16dp"
        android:alpha=".2"
        android:background="@color/font_grey"/>

    <TextView
        android:fontFamily="@font/opensans_semibold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/about_app"
        android:textColor="@color/font_blue"
        android:textSize="16sp"/>

    <TextView
        style="@style/Headline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/thanks"/>

    <TextView
        android:id="@+id/drop_line"
        style="@style/Label1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/drop_line"
        android:textColor="@color/font_blue"/>
</LinearLayout>