<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        style="@style/Headline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_distance_title"/>

    <SeekBar
        android:id="@+id/filter_distance_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/status_grey"/>


    <TextView
        style="@style/Headline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_distance_current_location"/>

    <TextView
        android:id="@+id/filter_distance_address"
        style="@style/Headline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_distance_current_location"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filter_distance_new_address"
            style="@style/Headline1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filter_distance_new_address"
            android:textColor="@color/font_blue"/>


        <TextView
            android:id="@+id/filter_distance_update_location"
            style="@style/Headline1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filter_distance_update_location"
            android:textColor="@color/font_blue"/>
    </LinearLayout>
</LinearLayout>