<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.takescoop.americanwhitewaterandroid.view.GageCell
        android:id="@+id/gage_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/description"
            style="@style/Text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="4"/>

        <TextView
            android:id="@+id/read_more"
            style="@style/Text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/read_more"
            android:textColor="@color/font_blue"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey_divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/difficulty"
            style="@style/Number1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/length"
            style="@style/Number1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/gradient"
            style="@style/Number1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty"
            android:textColor="@color/font_grey"/>

        <TextView
            style="@style/Label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/length"
            android:textColor="@color/font_grey"/>

        <TextView
            style="@style/Label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gradient"
            android:textColor="@color/font_grey"/>
    </LinearLayout>
</LinearLayout>