<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/primary"
              android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/news_tab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_news_feed"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal"
            android:text="@string/news"
            android:textColor="@color/white"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/runs_tab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_kayak"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal"
            android:text="@string/runs"
            android:textColor="@color/white"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/favorites_tab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_favorites"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal"
            android:text="@string/favorites"
            android:textColor="@color/white"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/map_tab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_map"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal"
            android:text="@string/map"
            android:textColor="@color/white"
            android:textSize="12sp"/>
    </LinearLayout>
</LinearLayout>