<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_heart"/>

        <TextView
            style="@style/Headline1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/donate_title"/>
    </LinearLayout>

    <TextView
        style="@style/Text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/donate_detail"/>

    <LinearLayout
        android:id="@+id/donate_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/red_oval">

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="17dp"
            android:layout_height="14dp"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_heart"/>

        <TextView
            style="@style/Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="8dp"
            android:text="@string/donate_button_title"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_chevron_right"/>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>